variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: value stepAmount
stepAmount = 0
^Variables:4: error: not found: value stepAmount
  stepAmount=stepAmount+
  ^